# precision-guitar-tuner

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEPENDENCIES.md  README.md  vcpkg.json
.agent/workflows/: primer.md
.claude/: DEVELOPMENT_PLAN.md
.claude/commands/: commit.md  pre-push.md
.github/workflows/: build.yml  coverage.yml  deploy.yml  docs.yml  format.yml  pre-commit.yml  static-analysis.yml  tests.yml
assets/shaders/: geometry.vert  text.frag  text.vert
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Packaging.cmake  StandardSettings.cmake
docs/: QUICK_START.md  RELEASE_PREP_SUMMARY.md  ROADMAP.md  UI_POLISH_PLAN.md  USER_GUIDE.md
src/: AudioProcessingLayer.cpp  AudioProcessingLayer.h  CMakeLists.txt  Config.cpp  Config.h  Constants.h  FontRenderer.cpp  FontRenderer.h  PrecisionGuitarTuner.cpp  PrecisionGuitarTunerApp.cpp  PrecisionGuitarTunerApp.h  TunerVisualizationLayer.cpp  TunerVisualizationLayer.h  TuningPresets.cpp  TuningPresets.h  main.cpp
src/Layers/: AudioProcessingLayer.cpp  AudioProcessingLayer.h  SettingsLayer.cpp  SettingsLayer.h  TunerVisualizationLayer.cpp  TunerVisualizationLayer.h
tests/: CMakeLists.txt  ConfigTest.cpp  TestAudioProcessingLayer.cpp  TestConfig.cpp  TestPitchStabilizer.cpp  TestTuningPresets.cpp
tests/mocks/: MockAudioDevice.cpp  MockAudioDevice.h
